--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.juickadvanced"
-          android:versionCode="2012121903" android:versionName="18.18.end_of_world">
+          android:versionCode="2012122101" android:versionName="18.18.end_of_world.1">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -107,7 +107,7 @@
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.NewJuickPreferenceActivityMT"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
-        <activity android:name="com.juick.android.XMPPPreferenceActivity"
+        <activity android:name="com.juick.android.XMPPPreferenceActivity" android:theme="@style/Theme.Sherlock.NoNavigation"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.EditFiltersActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
