commit for 20130414XX.jar

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,7 +38,6 @@
                 android:name="android.app.default_searchable"
                 android:value="com.juick.android.SearchActivity"/>
         <activity android:name="com.juick.android.MainActivity"  android:launchMode="singleTask"
-                  android:theme="@style/Theme.Sherlock.Light"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -55,7 +54,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.juick.android.MessagesActivity"
-                  android:theme="@style/Theme.Sherlock.NoNavigation"
+                  android:theme="@style/Theme.Sherlock.JustNoNavigation"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -63,13 +62,13 @@
                 <data android:mimeType="vnd.android.cursor.item/vnd.com.juick.profile"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.juick.android.UserCenterActivity" android:label="@string/UserCenter" android:theme="@style/Theme.Sherlock.NoNavigation"
+        <activity android:name="com.juick.android.UserCenterActivity" android:label="@string/UserCenter" android:theme="@style/Theme.Sherlock.JustNoNavigation"
                   android:configChanges="keyboard|keyboardHidden|orientation">
         </activity>
         <activity android:name="org.acra.CrashReportDialog"
                   android:configChanges="keyboard|keyboardHidden|orientation">
         </activity>
-        <activity android:name="com.juick.android.NewMessageActivity" android:label="@string/New_message" android:theme="@style/Theme.Sherlock.NoNavigation"
+        <activity android:name="com.juick.android.NewMessageActivity" android:label="@string/New_message" android:theme="@style/Theme.Sherlock.JustNoNavigation"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
@@ -80,9 +79,9 @@
                 <data android:mimeType="video/mp4"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.juick.android.ExploreActivity" android:label="@string/Juick__Explore" android:theme="@style/Theme.Sherlock.NoNavigation"
+        <activity android:name="com.juick.android.ExploreActivity" android:label="@string/Juick__Explore" android:theme="@style/Theme.Sherlock.JustNoNavigation"
                   android:configChanges="keyboard|keyboardHidden|orientation" android:noHistory="true"/>
-        <activity android:name="com.juick.android.ThreadActivity" android:label="" android:theme="@style/Theme.Sherlock.NoNavigation"
+        <activity android:name="com.juick.android.ThreadActivity" android:label="" android:theme="@style/Theme.Sherlock.JustNoNavigation"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.PlacesActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
@@ -96,7 +95,7 @@
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.PreferencesActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
-        <activity android:name="com.juick.android.TagsActivity" android:label="@string/Tags" android:theme="@style/Theme.Sherlock.NoNavigation"
+        <activity android:name="com.juick.android.TagsActivity" android:label="@string/Tags" android:theme="@style/Theme.Sherlock.JustNoNavigation"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.JuickPreferencesActivity" android:launchMode="singleTask"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
@@ -104,7 +103,7 @@
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.NewJuickPreferenceActivityMT"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
-        <activity android:name="com.juick.android.XMPPPreferenceActivity" android:theme="@style/Theme.Sherlock.NoNavigation"
+        <activity android:name="com.juick.android.XMPPPreferenceActivity" android:theme="@style/Theme.Sherlock.JustNoNavigation"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.EditFiltersActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
@@ -116,7 +115,7 @@
         </activity>
         <activity android:name="com.juick.android.PickLocationActivity" android:label="@string/Pick_a_location"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
-        <activity android:name="com.juick.android.XMPPIncomingMessagesActivity" android:label="@string/Incoming_Events" android:theme="@style/Theme.Sherlock.NoNavigation"
+        <activity android:name="com.juick.android.XMPPIncomingMessagesActivity" android:label="@string/Incoming_Events" android:theme="@style/Theme.Sherlock.JustNoNavigation"
                   android:launchMode="singleTask" android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.DisplayChartActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation"/>
