left menu (sources) in progress

--- a/project.properties
+++ b/project.properties
@@ -14,6 +14,7 @@ key.store=/home/san/.ssh/juick-advanced-key.keystore
 key.alias=juick-advanced-key
 #key.store=/home/san/.android/debug.keystore
 #key.alias=androiddebugkey
-android.library.reference.1=../ActionBarSherlock/library
-android.library.reference.2=../yuku-android-util/AmbilWarna
+android.library.reference.0=../ActionBarSherlock/library
+android.library.reference.1=../yuku-android-util/AmbilWarna
+android.library.reference.2=../com.mobeta.android.dslv
 
