incomplete cancellation of the send if websocket already recvd your msg

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data android:scheme="http" android:host="*"/>
+                <data android:scheme="https" android:host="*"/>
             </intent-filter>
         </activity>
         <activity android:name="com.juick.android.MessagesActivity"
