--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.juickadvanced"
-          android:versionCode="2013081901" android:versionName="20.2.0">
+          android:versionCode="2013081902" android:versionName="20.2.1">
 
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="13"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -55,7 +55,7 @@
                 <data android:scheme="http" android:host="bnw.im"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.juick.android.SimpleBrowser" android:label="Juick Simple Browser">
+        <activity android:name="com.juick.android.SimpleBrowser" android:label="Juick Simple Browser" android:enabled="false">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
