--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,16 @@
         <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.juick.android.SearchActivity"/>
+        <activity android:name="com.juick.android.MainActivityNew"
+                  android:label="MainActivityNew"
+                  android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+                  android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
         <activity android:name="com.juick.android.MainActivity"  android:launchMode="singleTask"
                   android:theme="@style/Theme.AppCompat"
                   android:configChanges="keyboard|keyboardHidden|orientation">
