--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.juickadvanced" android:hardwareAccelerated="true"
-          android:versionCode="2013112401" android:versionName="20.3.3">
+          android:versionCode="2014020601" android:versionName="20.3.4">
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="13"/>
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="13"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
@@ -141,6 +142,7 @@
         <activity
                 android:label="@string/com_juick"
                 android:launchMode="singleTop"
+                android:theme="@style/Theme.Sherlock.Light"
                 android:name="com.juick.android.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
