--- a/project.properties
+++ b/project.properties
@@ -16,4 +16,5 @@ key.alias=juick-advanced-key
 #key.alias=androiddebugkey
 android.library.reference.1=../yuku-android-util/AmbilWarna
 android.library.reference.2=../ActionBarSherlock/library
+android.library.reference.3=../FileExplorer
 
