some changes from tool

--- a/project.properties
+++ b/project.properties
@@ -8,10 +8,13 @@
 # project structure.
 
 # Project target.
-target=android-21
+target=android-16
 project.all.jars.path=libs/:common.jar
 key.store=/home/san/.ssh/juick-advanced-key.keystore
 key.alias=juick-advanced-key
+android.library.reference.1=../yuku-android-util/AmbilWarna
+android.library.reference.2=../ActionBarSherlock/library
+android.library.reference.3=../FileExplorer
 #key.store=/home/san/.android/debug.keystore
 #key.alias=androiddebugkey
 
