--- a/deps/yuku-android-util/AmbilWarna/build.gradle
+++ b/deps/yuku-android-util/AmbilWarna/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.2.0-rc2'
     }
  }
 
@@ -23,7 +23,7 @@ android { sourceSets {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '24'
 
     defaultConfig {
         minSdkVersion 8
