--- a/local.properties
+++ b/local.properties
@@ -1,2 +1,8 @@
-sdk.dir=/Users/san/soft/sdk
-ndk.dir=/Users/san/soft/ndk
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Wed Mar 06 19:45:35 EET 2019
+sdk.dir=/home/san/soft/android
